<resources>
    <string name="app_name">GroceryMVP</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="PostalCode">Pin Code</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="login_login_hint">Have an account? Login</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">CART</string>
    <string name="menu_Vendor">Vendor Price</string>
    <string name="menu_Ordered">Order History</string>
</resources>