<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="Register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextName"
            style="@style/modifiedEditText"
            android:hint="@string/login_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/blackTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMobile"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextMobile"
            style="@style/modifiedEditText"
            android:hint="@string/login_mobile_number_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/blackTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/blackTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAddress"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextAddress"
            style="@style/modifiedEditText"
            android:hint="@string/Address"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:textColor="@color/blackTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCity"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextCity"
            style="@style/modifiedEditText"
            android:hint="@string/City"
            android:maxLines="1"
            android:textColor="@color/blackTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPostalcode"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextPostalcode"
            style="@style/modifiedEditText"
            android:hint="@string/PostalCode"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@color/blackTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cirRegisterButton"
        style="@style/loginButton"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="Confirm" />


</LinearLayout>